Some changes to settings layout, as well as fixing theme settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,14 @@
     <string name="title_activity_settings">Settings</string>
     <string name="checkTypeMsg">Check Type</string>
     <string name="themeTypeMsg">Theme</string>
+
     <string-array name="checkTypeArray">
         <item>Check</item>
         <item>X</item>
         <item>Ducky</item>
+        <item>Niggaz Dickz</item>
+        <item>Boats N Hoes</item>
+        <item>Fuuuuck</item>
     </string-array>
     <string-array name="themeArray">
         <item>Dark</item>
